fix yellow color so it is readable on the white BG

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,6 +108,6 @@ body {
 }
 
 .yellowwarning {
-    color: #ffee00;
+    color: #ffc107;
 }
 
